--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,6 @@
   }
 
   &__big-picture-text {
-    // margin-top: 50rem;
     text-shadow: 0 0 8px rgba(0,0,0,.25);
     color: $bpk-color-white;
 
@@ -40,7 +39,8 @@
   }
 
   &__header {
-    padding: $bpk-spacing-xs 0;
+    margin: -10px;
+    padding: $bpk-spacing-md 0;
     background-color: $bpk-color-gray-900;
     color: $bpk-color-white;
     margin-bottom: $bpk-spacing-sm;
