--- a/src/nav-layout.scss
+++ b/src/nav-layout.scss
@@ -1,6 +1,6 @@
 @import '~bpk-mixins';
 
-.app {
+.nav-layout {
   @mixin full-width {
     width: 100%;
     margin-right: 0;
@@ -26,24 +26,28 @@
     @include centred;
   }
 
-  &__download-button {
-    margin-top: -1.3rem;
-    padding: 0.3rem 0 0.3rem 0;
-    background-color: $bpk-color-gray-700;
-    width: 100%;
+  &__main {
+    display: flex;
+    margin: 1rem;
+    flex-direction: row;
   }
 
-  &__background-duck {
-    background-image: url("https://c1.staticflickr.com/5/4344/35990455490_a009268ead_k.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: blur(5px) brightness(0.75);
-    height: 105%;
-    left: -5px;
-    position: fixed;
-    top: -5px;
-    width: 105%;
-    z-index: -1;
+  &__nav-col {
+    width: 100%;
+    max-width: 13rem;
+    display: inline-block;
+    background-color: $bpk-color-blue-500;
+
+    @include bpk-breakpoint-tablet {
+      max-width: 0rem;
+    }
+  }
+
+  &__content-col {
+    min-width: 13rem;
+      display: inline-block;
+       flex-grow: 1;
+    background-color: $bpk-color-green-500;
   }
 
   &__header {
@@ -59,10 +63,6 @@
     @include bpk-breakpoint-mobile {
       padding: $bpk-spacing-base 0;
     }
-  }
-
-  &__main {
-    padding: $bpk-spacing-base 0;
   }
 
   &__component {
