--- a/src/App.scss
+++ b/src/App.scss
@@ -1,29 +1,9 @@
 @import '~bpk-mixins';
 
 .app {
-  @mixin full-width {
-    width: 100%;
-    margin-right: 0;
-  }
-
-  @mixin left-aligned {
-    text-align: left;
-  }
 
   @mixin centred {
     text-align: center;
-  }
-
-  @mixin max-width {
-    max-width: 30rem;
-  }
-
-  &__big-picture-text {
-    // margin-top: 50rem;
-    text-shadow: 0 0 8px rgba(0,0,0,.25);
-    color: $bpk-color-white;
-
-    @include centred;
   }
 
   &__download-button {
@@ -31,19 +11,6 @@
     padding: 0.3rem 0 0.3rem 0;
     background-color: $bpk-color-gray-700;
     width: 100%;
-  }
-
-  &__background-duck {
-    background-image: url("https://c1.staticflickr.com/5/4344/35990455490_a009268ead_k.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: blur(5px) brightness(0.75);
-    height: 105%;
-    left: -5px;
-    position: fixed;
-    top: -5px;
-    width: 105%;
-    z-index: -1;
   }
 
   &__header {
@@ -61,25 +28,30 @@
     }
   }
 
-  &__main {
-    padding: $bpk-spacing-base 0;
+  &__container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+    flex-direction: row;
   }
 
-  &__component {
-    margin-right: $bpk-spacing-base;
-    margin-bottom: $bpk-spacing-base;
+  &__big-picture-text {
+    margin-top: 3rem;
+    text-shadow: 0 0 8px rgba(0,0,0,.25);
+    color: $bpk-color-white;
   }
 
-  &__button {
-    margin-right: $bpk-spacing-base;
-    margin-bottom: $bpk-spacing-base;
-
-    @include bpk-breakpoint-mobile {
-      @include full-width;
-    }
-  }
-
-  &__text {
-    margin-bottom: $bpk-spacing-sm;
-  }
+  &__background-duck {
+    background-image: url("https://c1.staticflickr.com/5/4344/35990455490_a009268ead_k.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(5px) brightness(0.75);
+    height: 105%;
+    left: -5px;
+    position: fixed;
+    top: -5px;
+    width: 105%;
+    z-index: -1;
+}
 }
