--- a/src/get-social.scss
+++ b/src/get-social.scss
@@ -5,7 +5,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 1rem;
+    margin: 1rem 0 1rem 0;
     flex-direction: row;
   }
 
