--- a/src/get-social.scss
+++ b/src/get-social.scss
@@ -2,22 +2,22 @@
 
 .get-social {
   &__container {
-    width: 100%;
     display: flex;
-    justify-content: center;
-    margin: 1rem 0 1rem 0;
+    width: 100%;
+    margin: 1rem 0;
     flex-direction: row;
+    justify-content: center;
   }
 
   &__icon {
+    display: inline-block;
     width: 100%;
     max-width: 1.5rem;
     height: 100%;
     max-height: 1.5rem;
-    display: inline-block;
   }
 
   &__link {
-    margin: 0 0.5rem 0 0.5rem;
+    margin: 0 .5rem;
   }
 }
