--- a/src/profile-pic.scss
+++ b/src/profile-pic.scss
@@ -4,7 +4,7 @@
   &__container {
     width: 13rem;
     height: 13rem;
-    border-radius: 5px;
+    border-radius: .5rem;
     overflow: hidden;
   }
 
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: center;
+    background-size: cover;
   }
 }
