Add routing and Navigation

--- a/src/get-social.scss
+++ b/src/get-social.scss
@@ -5,7 +5,10 @@
     display: flex;
     width: 100%;
     flex-direction: row;
-    // justify-content: center;
+
+    @include bpk-breakpoint-tablet {
+      justify-content: center;
+    }
   }
 
   &__icon {
