--- a/src/nav-layout.scss
+++ b/src/nav-layout.scss
@@ -41,6 +41,12 @@
     flex-grow: 1;
     overflow: hidden;
 
+    display: flex;
+    width: 100%;
+    padding: 1rem;
+    flex-direction: row;
+    justify-content: center;
+
     // @include bpk-breakpoint-tablet {
     //   min-width: 100%;
     //   width: 100%;
