--- a/src/get-social.scss
+++ b/src/get-social.scss
@@ -17,7 +17,11 @@
     max-width: 2rem;
     height: 100%;
     max-height: 2rem;
-    filter: opacity(90%);
+    filter: opacity(70%);
+
+    &:hover {
+      filter: opacity(90%);
+    }
   }
 
   &__link {
