--- a/src/personal-details.scss
+++ b/src/personal-details.scss
@@ -14,4 +14,13 @@
       align-items: center;
     }
   }
+
+  &__link {
+    color: $bpk-color-gray-700;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
