Remove hashes from routing

--- a/src/nav-layout.scss
+++ b/src/nav-layout.scss
@@ -23,6 +23,7 @@
     display: inline-block;
     width: 100%;
     max-width: 15rem;
+    padding-top: 1rem;
     overflow: hidden;
     // background-color: blue;
 
