--- a/src/components/section.scss
+++ b/src/components/section.scss
@@ -6,6 +6,8 @@
 
     &--text {
       padding-bottom: 0.5rem;
+      font-family: 'Iceland';
+      src: local('Iceland'), url(../fonts/Iceland-Regular.ttf) format('ttf');
     }
   }
 
@@ -15,6 +17,8 @@
 
     &--text {
       padding-bottom: .4rem;
+      font-family: 'Iceland';
+      src: local('Iceland'), url(../fonts/Iceland-Regular.ttf) format('ttf');
     }
   }
 }
