Add contact page

--- a/src/components/section.scss
+++ b/src/components/section.scss
@@ -22,6 +22,7 @@
     font-family: 'Neuton', serif;
 
     &--text {
+    color: $bpk-color-gray-700;
       padding-bottom: .5rem;
       font-family: 'Quattrocento Sans', sans-serif;
     }
@@ -33,6 +34,7 @@
     font-family: 'Neuton', serif;
 
     &--text {
+    color: $bpk-color-gray-700;
       padding-bottom: .4rem;
       font-family: 'Quattrocento Sans', sans-serif;
     }
