--- a/src/components/section.scss
+++ b/src/components/section.scss
@@ -20,6 +20,7 @@
   &__section {
     width:100%;
     color: $bpk-color-gray-700;
+    // font-family: 'Quattrocento Sans', sans-serif;
     font-family: 'Neuton', serif;
 
     &--text {
@@ -33,6 +34,7 @@
     width:100%;
     padding: 0 0 1rem;
     color: $bpk-color-gray-700;
+    // font-family: 'Quattrocento Sans', sans-serif;
     font-family: 'Neuton', serif;
 
     &--text {
