--- a/src/components/personal-details.scss
+++ b/src/components/personal-details.scss
@@ -45,7 +45,7 @@
     text-decoration: none;
 
     &:hover {
-      text-decoration: underline;
+      color: rgb(62,158,235);
     }
 
   &--skyscanner-blue {
