--- a/src/components/get-social.scss
+++ b/src/components/get-social.scss
@@ -9,6 +9,10 @@
     @include bpk-breakpoint-tablet {
       justify-content: center;
     }
+
+    &--centered {
+      justify-content: center;
+    }
   }
 
   &__icon {
