--- a/src/Pages/pages.scss
+++ b/src/Pages/pages.scss
@@ -1,11 +1,11 @@
 @import '~bpk-mixins';
 
 .pages {
-  &__home-page-item {
+  &__site-map-item {
     padding-bottom: 1.5rem;
   }
 
-  &__home-page-tree {
+  &__site-map-tree {
     display: flex;
     height: 30rem;
     flex-direction: column;
@@ -15,6 +15,14 @@
     @include bpk-breakpoint-tablet {
       height: auto;
     }
+  }
+
+  &__home-page-gubbins {
+    display: flex;
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   &__page {
@@ -43,5 +51,21 @@
     @include bpk-breakpoint-tablet {
       width:90%;
     }
+  }
+
+  &__banner {
+      height: 20rem;
+  }
+
+  &__banner-image {
+      background-position: center;
+      background-size: cover;
+      width: 100%;
+      height: 20rem;
+  }
+
+  &__banner-container {
+      padding-top: 2rem;
+      padding-left: 1rem;
   }
 }
