--- a/src/components/personal-details.scss
+++ b/src/components/personal-details.scss
@@ -38,6 +38,10 @@
       text-align: center;
       align-items: center;
     }
+
+    &--light {
+        color: $bpk-color-gray-100;
+    }
   }
 
   &__link {
