Improve Home Page

--- a/src/components/logo.scss
+++ b/src/components/logo.scss
@@ -27,6 +27,10 @@
       padding-left: 2rem;
       padding-right: 2rem;
     }
+
+    &--centered {
+      align-items: center;
+    }
   }
 
   &__logo-base {
