Remove bootstrap dependency

--- a/src/Pages/pages.scss
+++ b/src/Pages/pages.scss
@@ -5,6 +5,10 @@
     padding-bottom: 1.5rem;
   }
 
+  &__slider {
+      margin-top: -1.25rem;
+  }
+
   &__site-map-tree {
     display: flex;
     height: 30rem;
@@ -54,14 +58,14 @@
   }
 
   &__banner {
-      height: 24rem;
+      height: 30rem;
   }
 
   &__banner-image {
       background-position: center;
       background-size: cover;
       width: 100%;
-      height: 24rem;
+      height: 30rem;
   }
 
   &__banner-container {
@@ -73,7 +77,8 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        height: 22rem;
+        height: 28rem;
+        padding: 0;
     }
 
     &--horizontal-spread {
