--- a/src/components/navigation-bar.scss
+++ b/src/components/navigation-bar.scss
@@ -1,30 +1,30 @@
 @import '~bpk-mixins';
 
-.get-social {
-  &__container {
+.navigation-bar {
+  &__bar {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     flex-direction: row;
+    justify-content:right;
+    padding-right: 0.5rem;
 
     @include bpk-breakpoint-tablet {
-      justify-content: center;
     }
   }
 
-  &__icon {
-    display: inline-block;
-    width: 100%;
-    max-width: 2rem;
-    height: 100%;
-    max-height: 2rem;
-    filter: opacity(70%);
+  &__nav-item {
+      padding: 1.5rem;
+      padding-left: 0;
+    // display: inline-block;
+    // width: 100%;
+    // max-width: 2rem;
+    // height: 100%;
+    // max-height: 2rem;
+    // filter: opacity(70%);
 
-    &:hover {
-      filter: opacity(90%);
-    }
-  }
-
-  &__link {
-    margin: 0 .5rem 0 .2rem;
+    // &:hover {
+    //   filter: opacity(90%);
+    // }
   }
 }
