--- a/src/components/side-bar.scss
+++ b/src/components/side-bar.scss
@@ -3,7 +3,7 @@
 .side-bar {
   &__main {
     display: flex;
-    margin: 1rem .5rem .5rem;
+    margin: 0 .5rem .5rem;
     flex-direction: row;
     justify-content: center;
   }
@@ -44,6 +44,5 @@
     flex-direction: row;
     justify-content: center;
     flex-grow: 1;
-    overflow: hidden;
   }
 }
