Add light option to Sections

--- a/src/components/section.scss
+++ b/src/components/section.scss
@@ -27,6 +27,14 @@
     color: $bpk-color-gray-700;
       padding-bottom: .5rem;
       font-family: 'Quattrocento Sans', sans-serif;
+
+      &--no-padding {
+        padding:0;
+      }
+
+      &--light {
+          color: white;
+      }
     }
   }
 
@@ -42,9 +50,13 @@
       padding-bottom: .4rem;
       font-family: 'Quattrocento Sans', sans-serif;
 
-    &--no-padding {
+      &--no-padding {
         padding:0;
-    }
+      }
+
+      &--light {
+          color: white;
+      }
     }
 
     &--no-padding {
