--- a/src/components/section.scss
+++ b/src/components/section.scss
@@ -12,6 +12,11 @@
   src: url('https://fonts.googleapis.com/css?family=Quattrocento+Sans')
 }
 @fontface {
+  font-family: 'Tangerine', cursive;
+  src: url('https://fonts.googleapis.com/css?family=Tangerine')
+}
+
+@fontface {
   font-family: 'Iceland', cursive;
   src: url('https://fonts.googleapis.com/css?family=Iceland')
 }
@@ -27,6 +32,10 @@
     color: $bpk-color-gray-700;
       padding-bottom: .5rem;
       font-family: 'Quattrocento Sans', sans-serif;
+
+      &--fancy {
+        font-family: 'Tangerine', cursive;
+      }
 
       &--no-padding {
         padding:0;
@@ -49,6 +58,10 @@
     color: $bpk-color-gray-700;
       padding-bottom: .4rem;
       font-family: 'Quattrocento Sans', sans-serif;
+
+      &--fancy {
+        font-family: 'Tangerine', cursive;
+      }
 
       &--no-padding {
         padding:0;
