--- a/src/Pages/pages.scss
+++ b/src/Pages/pages.scss
@@ -24,24 +24,16 @@
     }
   }
 
-  &__home-page-gubbins {
-    display: flex;
-    height: auto;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
   &__page {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    width: 100%;
   }
 
   &__link {
-    color: $bpk-color-gray-700;
     text-decoration: none;
 
     &:hover {
