--- a/src/components/get-social.scss
+++ b/src/components/get-social.scss
@@ -23,9 +23,28 @@
     max-height: 2rem;
     filter: opacity(70%);
 
+    &--light {
+      filter: opacity(100%);
+
+
+      &:hover {
+        filter: opacity(80%);
+      }
+  }
+  
+      &--light-inverted {
+        filter: brightness(0) invert(1);
+        
+        &:hover {
+          filter:brightness(0) invert(1) opacity(90%);
+        }
+      }
+
+  &--no-light {
     &:hover {
       filter: opacity(90%);
     }
+  }
   }
 
   &__link {
