--- a/src/Pages/pages.scss
+++ b/src/Pages/pages.scss
@@ -74,6 +74,7 @@
         justify-content: space-around;
         height: 28rem;
         padding: 0;
+        text-align: center;
     }
 
     &--horizontal-spread {
