--- a/src/components/navigation-bar.scss
+++ b/src/components/navigation-bar.scss
@@ -10,20 +10,11 @@
     align-items: center;
 
     @include bpk-breakpoint-tablet {
+        //TODO CODE
     }
   }
 
   &__nav-item {
       padding: 0 1rem;
-    // display: inline-block;
-    // width: 100%;
-    // max-width: 2rem;
-    // height: 100%;
-    // max-height: 2rem;
-    // filter: opacity(70%);
-
-    // &:hover {
-    //   filter: opacity(90%);
-    // }
   }
 }
