--- a/src/components/get-social.scss
+++ b/src/components/get-social.scss
@@ -22,6 +22,7 @@
     height: 100%;
     max-height: 2rem;
     filter: opacity(70%);
+    padding: 0 1rem;
 
     &--light {
       filter: opacity(100%);
