--- a/src/components/logo.scss
+++ b/src/components/logo.scss
@@ -1,4 +1,6 @@
 @import '~bpk-mixins';
+@import "../../bower_components/animatewithsass/animate.scss";
+
 @fontface {
   font-family: 'Bungee Inline', cursive;
   src: url('https://fonts.googleapis.com/css?family=Bungee+Inline')
@@ -21,6 +23,16 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 1rem;
+    transition: all 0.1s;
+    // @include bounceIn(
+    //   $delay: .5s
+    // );
+
+      &:focus,
+      &:active,
+      &:hover {
+       @include pulse();
+      }
 
     @include bpk-breakpoint-tablet {
       align-items: center;
