--- a/src/components/navigation-bar.scss
+++ b/src/components/navigation-bar.scss
@@ -1,20 +1,52 @@
 @import '~bpk-mixins';
 
 .navigation-bar {
+  &__container {
+    width: 100%;
+  }
+
   &__bar {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
     @include bpk-breakpoint-tablet {
-        //TODO CODE
+        height: 0;
+        transition: all 1s ease-out;
+        display: none;
+        padding: 1rem 0 1rem 0;
+        flex-direction: column;
+    }
+
+    &--open {
+        display: flex;
+        height: auto;
+    }
+  }
+
+  &__burger-button {
+        height: 0;
+        display: none;
+
+    @include bpk-breakpoint-tablet {
+        display: flex;
+        margin: 1rem;
+        height: auto;
+    }
+
+    &--open {
     }
   }
 
   &__nav-item {
       padding: 0 1rem;
+
+    @include bpk-breakpoint-tablet {
+        padding-top: .5rem;
+        padding-bottom: .5rem;
+    }
   }
 }
