--- a/src/components/coming-soon.scss
+++ b/src/components/coming-soon.scss
@@ -33,5 +33,9 @@
     font-weight: bold;
     font-family: 'Quattrocento Sans', sans-serif;
 
+    @include bpk-breakpoint-tablet {
+        font-size: 1.5rem;
+    }
+
   }
 }
